--- a/_posts/2015-02-20-C5SEXA.md
+++ b/_posts/2015-02-20-C5SEXA.md
@@ -7,7 +7,20 @@ tags : [ciclo-5, garcia]
 
 ## Ementa Tópicos especiais em Sistemas para Internet
 
-<div class="alert alert-info">Ementa tá no caderno do Adam gato</div>
+1. [Polimorfismo](http://pt.wikipedia.org/wiki/Polimorfismo)  para métodos (GENERICS) / Collections
+2. [Reflection](http://bit.ly/1F1nRlZ)
+3. [Design Patterns](http://pt.wikipedia.org/wiki/Padr%C3%A3o_de_projeto_de_software)
+  - [Strategy](http://pt.wikipedia.org/wiki/Strategy)
+  - [Abstract Factory](http://pt.wikipedia.org/wiki/Abstract_Factory)
+  - [Decorator](http://pt.wikipedia.org/wiki/Decorator)
+  - [Singleton](http://pt.wikipedia.org/wiki/Singleton)
+  - [Observer](http://pt.wikipedia.org/wiki/Observer)
+  - [Visitor](http://pt.wikipedia.org/wiki/Visitor_Pattern)
+  - [Proxy](http://bit.ly/1F1nQOE)
+4. [Orientação a aspectos](http://pt.wikipedia.org/wiki/Programa%C3%A7%C3%A3o_orientada_a_aspecto)
+5. Topicos especiais
+
+***
  
 ## Referências bibliográficas
 
@@ -17,7 +30,8 @@ tags : [ciclo-5, garcia]
 
 ***
 
-## Polimorfismo de Subtipos  
+## Polimorfismo de Subtipos
+
 É a maneira de referenciar um objeto de várias formas.
 
 <pre>
@@ -51,6 +65,9 @@ Animal a  = new Gato()           |       g.arranhar()   [✓]
                     |                                     |
                 g._/                                   a./
 </pre>
+
+- [Teoria dos tipos](http://pt.wikipedia.org/wiki/Teoria_dos_tipos)
+- [Alocação de memória](http://pt.wikipedia.org/wiki/Aloca%C3%A7%C3%A3o_de_mem%C3%B3ria)
 
 ***
  
