corrigido arquivo aula

--- a/_posts/2015-02-13-C5SEXA.md
+++ b/_posts/2015-02-13-C5SEXA.md
@@ -1,8 +1,8 @@
 ---
-title: Ementa Tópicos Especiais Em Sistemas Para Internet (Garcia)
+title: Aula C5SEXA (Garcia)
 layout: post
 category : C5SEXA
-tags : [ciclo-5, garcia]
+tags : [ciclo-5, garcia, aula]
 ---
 
 ## Ementa Tópicos especiais em Sistemas para Internet
