--- a/_posts/2015-02-20-C5SEXA.md
+++ b/_posts/2015-02-20-C5SEXA.md
@@ -1,23 +1,31 @@
 ---
-title: Ementa Tópicos Especiais Em Sistemas Para Internet (Garcia)
+title: Aula C5SEXA (Garcia)
 layout: post
-category : C5SEXB
-tags : [ciclo-5, garcia]
+category : C5SEXA
+tags : [ciclo-5, garcia, aula]
 ---
 
-# GARCIA - AULA dia 20 
-*Este inicio é uma atualizada sobre o que o ciro deu semestr passado. Isso ficou flatando (apenas pra ficar por dentro)*
+<div class="alert alert-danger">Este post precisa ser melhorado, mais exemplos.</div>
 
-- **Bound**: usado para fazer restição. 
-  1. **Upper boud**: Ele não passa 'Joia', caso haja uma classe acima ele nao pega.
-    Se for usado uma string dará erro. Só serão aceitos os "filhos" (subclasse  Joia).
-    <pre>
-      public class Caixa ** < T extends Joia > ** {
-        ...
-      }
-    </pre>
-  2. **Lower bound**:
-    <pre>
+<div class="alert alert-info">Este inicio é uma atualizada sobre o que o ciro deu semestre passado. Isso ficou faltando (apenas pra ficar por dentro)</div>
+
+## Bound
+Usado para fazer restição. 
+
+**Upper boud**
+Ele não passa 'Joia', caso haja uma classe acima ele nao pega.
+
+Se for usado uma string dará erro. Só serão aceitos os "filhos" (subclasse  Joia).
+
+<pre>
+  public class Caixa < T extends Joia > {
+    ...
+  }
+</pre>
+
+**Lower bound**
+
+<pre>
       |---------------|               |-------------------------|
       |     list      |               |          Number         |
       |---------------|               |-------------------------|
@@ -26,40 +34,46 @@ tags : [ciclo-5, garcia]
       |---------------|             |-------------|    |-------------|
       |   ArrayList   |             |   integer   |    |   integer   |
       |---------------|             |-------------|    |-------------|
-    </pre>  
+ 
+</pre>
 
-***
-
-List< ? super Number > a = New arrayList<objeto>;
+<pre>
+List< ? super Number > a = New arrayList< objeto >;
           |
           |-------> Só pode chegar até *NUMBER*
                     Não poderá chegar na classe *String* nem *Integer* porque é acima. 
-
+</pre>
 
 ***
-# REGRA PECS
+
+## Regra PECS
+
 - *Super*: Só add();
 - *Extends*: só faz get();
 
-## Exemplo com arrayList:
-    <pre>
-        public Class PortaJoia_{
-            ...
-        }
-    </pre>
+**Exemplo com arrayList:**
+
+<pre>
+    public Class PortaJoia_ {
+        ...
+    }
+</pre>
  
 *** 
 
-# Inicio da Aula - MATERIA
+# Matéria do semestre
+
 ## Reflection: 
-- visto em php
-        <pre>
-            <?
-                class Cachorro{}
-                $c = "cachorro";
-                $d = new $c();
-            ?>
-        </pre>
+Visto em php
+
+<pre>
+    < ?php
+        class Cachorro{}
+        $c = "cachorro";
+        $d = new $c();
+    ?>
+</pre>
+
 - Conhecido como *blackmagic*
 - É nada mais do que a habilidade de enxergar um *.class*' (no java).
 - É um pacote que te d´´a premissão de ver informações no seu *.class*.:
@@ -73,7 +87,6 @@ List< ? super Number > a = New arrayList<objeto>;
 - Annotations   { Marcador para conversas com o compilador}
 - Modifier      { abstrct, pretect, public, defout }
  
-
 ***
 
 ## Boilerplate
@@ -86,15 +99,15 @@ Repetição trecho de código em várias partes do arquivo mudando apenas pequen
 </pre>
 
 **Resolvemos assim:**
-</pre>
+
+<pre>
     public String toString(){
-        Class <?> c = this.Class(); // Pega todas as infos do .class
-        return c.getSimpleName();   // Ele apresentará a classe pelo seu nome. Não apresentará o endereço de memória ao lado.
+        Class < ? > c = this.Class(); // Pega todas as infos do .class
+        return c.getSimpleName(); // Ele apresentará a classe pelo seu nome. Não apresentará o endereço de memória ao lado.
     }
 </pre>
 
-
-
+*** 
 
 ## Download arquivos aula
 [Fazer Download]({{ BASE_PATH }}/media/aula-2015-02-20.rar) 
