added relatorio de aulas no README e melhorado posts

--- a/_posts/2015-02-20-C5SEXA.md
+++ b/_posts/2015-02-20-C5SEXA.md
@@ -12,18 +12,18 @@ tags : [ciclo-5, garcia, aula]
 ## Bound
 Usado para fazer restição. 
 
-**Upper boud**
+#### Upper boud
 Ele não passa 'Joia', caso haja uma classe acima ele nao pega.
 
 Se for usado uma string dará erro. Só serão aceitos os "filhos" (subclasse  Joia).
 
-<pre>
-  public class Caixa < T extends Joia > {
-    ...
-  }
-</pre>
+{% highlight java %}
+public class Caixa < T extends Joia > {
+  ...
+}
+{% endhighlight %}
 
-**Lower bound**
+#### Lower bound
 
 <pre>
       |---------------|               |-------------------------|
@@ -34,7 +34,6 @@ Se for usado uma string dará erro. Só serão aceitos os "filhos" (subclasse  J
       |---------------|             |-------------|    |-------------|
       |   ArrayList   |             |   integer   |    |   integer   |
       |---------------|             |-------------|    |-------------|
- 
 </pre>
 
 <pre>
@@ -53,26 +52,26 @@ List< ? super Number > a = New arrayList< objeto >;
 
 **Exemplo com arrayList:**
 
-<pre>
-    public Class PortaJoia_ {
-        ...
-    }
-</pre>
+{% highlight java %}
+public Class PortaJoia_ {
+  ...
+}
+{% endhighlight %}
  
 *** 
 
-# Matéria do semestre
+<div class="alert alert-info">Matéria do semestre</div>
 
 ## Reflection: 
 Visto em php
 
-<pre>
-    < ?php
-        class Cachorro{}
-        $c = "cachorro";
-        $d = new $c();
-    ?>
-</pre>
+{% highlight php %}
+<?php
+  class Cachorro{}
+  $c = "cachorro";
+  $d = new $c();
+?>
+{% endhighlight %}
 
 - Conhecido como *blackmagic*
 - É nada mais do que a habilidade de enxergar um *.class*' (no java).
@@ -92,20 +91,20 @@ Visto em php
 ## Boilerplate
 Repetição trecho de código em várias partes do arquivo mudando apenas pequenas coisas, como por exemplo um syso:
 
-<pre>
-    public String toString(){
-        syso "ClasseNome";
-    }
-</pre>
+{% highlight java %}
+public String toString(){
+  syso "ClasseNome";
+}
+{% endhighlight %}
 
 **Resolvemos assim:**
 
-<pre>
-    public String toString(){
-        Class < ? > c = this.Class(); // Pega todas as infos do .class
-        return c.getSimpleName(); // Ele apresentará a classe pelo seu nome. Não apresentará o endereço de memória ao lado.
-    }
-</pre>
+{% highlight java %}
+public String toString(){
+  Class < ? > c = this.Class(); // Pega todas as infos do .class
+  return c.getSimpleName(); // Ele apresentará a classe pelo seu nome. Não apresentará o endereço de memória ao lado.
+}
+{% endhighlight %}
 
 *** 
 
