Corrigi link dos arquivos de download pasta media em posts

--- a/_posts/2015-02-13-C5SEXA.md
+++ b/_posts/2015-02-13-C5SEXA.md
@@ -89,4 +89,4 @@ O ARRAY LIST É UM EXEMPLO. Ele lista qualquer coisa que for definido.
 *** 
 
 ## Download arquivos aula
-[Fazer Download]({{ BASE_PATH }}/media/aula-2015-02-13.rar) 
+[Fazer Download]({{ site.production_url }}/media/aula-2015-02-13.rar) 
