--- a/_posts/2015-02-20-C5SEXA.md
+++ b/_posts/2015-02-20-C5SEXA.md
@@ -109,4 +109,4 @@ public String toString(){
 *** 
 
 ## Download arquivos aula
-[Fazer Download]({{ BASE_PATH }}/media/aula-2015-02-20.rar) 
+[Fazer Download]({{ site.production_url }}/media/aula-2015-02-20.rar) 
