--- a/_posts/2015-03-03-C5TERA.md
+++ b/_posts/2015-03-03-C5TERA.md
@@ -23,4 +23,4 @@ Criar aplicativo que converta temperaturas de Farenheit para Celsius e visse-ver
 
 
 ## Download arquivos aula
-[Fazer Download]({{ BASE_PATH }}/media/aula-2015-03-03-chiara-cV5.rar) 
+[Fazer Download]({{ site.production_url }}/media/aula-2015-03-03-chiara-cV5.rar) 
