--- a/_posts/2015-03-04-C5QUAA.md
+++ b/_posts/2015-03-04-C5QUAA.md
@@ -5,11 +5,9 @@ category : C5QUAA
 tags : [ciclo-5, ciro, aula]
 ---
 
-
 ### Matéria abordada
-- contrutores
-- validadoress
-
+- Contrutores
+- Validadores
 
 ## Download arquivos aula
-[Fazer Download]({{ BASE_PATH }}/media/aula-2015-03-04-ciro.rar) 
+[Fazer Download]({{ site.production_url }}/media/aula-2015-03-04-ciro.rar) 
