--- a/_posts/2015-03-06-C5SEXA.md
+++ b/_posts/2015-03-06-C5SEXA.md
@@ -13,4 +13,4 @@ tags : [ciclo-5, garcia, aula]
 *** 
 
 ## Download arquivos aula
-[Fazer Download]({{ BASE_PATH }}/media/aula-2015-03-06-garcia.rar) 
+[Fazer Download]({{ site.production_url }}/media/aula-2015-03-06-garcia.rar) 
