--- a/_posts/2015-03-10-C5TERA.md
+++ b/_posts/2015-03-10-C5TERA.md
@@ -27,4 +27,4 @@ Componentes Visuais:
     {% endhighlight %}
 
 ## Download arquivos aula
-[Fazer Download]({{ BASE_PATH }}/media/aula-2015-03-10-chiara.rar) 
+[Fazer Download]({{ site.production_url }}/media/aula-2015-03-10-chiara.rar) 
