--- a/_posts/2015-03-11-C5QUAA.md
+++ b/_posts/2015-03-11-C5QUAA.md
@@ -14,4 +14,4 @@ tags : [ciclo-5, ciro, aula]
 
 
 ## Download arquivos aula
-[Fazer Download]({{ BASE_PATH }}/media/aula-2015-03-04-ciro.rar) 
+[Fazer Download]({{ site.production_url }}/media/aula-2015-03-04-ciro.rar) 
