--- a/_posts/2015-03-03-C5TERA.md
+++ b/_posts/2015-03-03-C5TERA.md
@@ -5,22 +5,18 @@ category : C5TERA
 tags : [ciclo-5, chiara, aula]
 ---
 
-
-## ContadorV5
+## Contador V5
 Programinha simples criado em aula que incrementa e decrementa valor.
 
-
-### Matéria abordada
-Componentes Visuais:
+## Componentes Visuais:
 - Button
 - Text View
 - Text Field
 - Tratando eventos - clique em botão
 
-## TP Conversor F<>C
+## TP Conversor Farenheit<>Celsius
 Criar aplicativo que converta temperaturas de Farenheit para Celsius e visse-versa.
-[códigos aqui](https://gist.github.com/flaviacs/4b521605740b07cb1fc8).
-
+[Fazer Download]({{ site.production_url }}/media/gist4b521605740b07cb1fc8-c2e3ec1d74e8f76939031bdcf78859cfacb47af1.tar.gz) - ou - [ver no Gist](https://gist.github.com/flaviacs/4b521605740b07cb1fc8).
 
 ## Download arquivos aula
 [Fazer Download]({{ site.production_url }}/media/aula-2015-03-03-chiara-cV5.rar) 
