Revisado aula Ciro 04/03 #9

--- a/_posts/2015-03-04-C5QUAA.md
+++ b/_posts/2015-03-04-C5QUAA.md
@@ -5,9 +5,12 @@ category : C5QUAA
 tags : [ciclo-5, ciro, aula]
 ---
 
-### Matéria abordada
-- Contrutores
-- Validadores
+## Java EE: uma visão geral
+[Fazer Download]({{ site.production_url }}/media/DPS2-02-JavaEE.pdf)
+
+## Conversores e Validadores
+[Fazer Download]({{ site.production_url }}/media/DPS2-03-Conversores-Validadores.pdf)
+
 
 ## Download arquivos aula
 [Fazer Download]({{ site.production_url }}/media/aula-2015-03-04-ciro.rar) 
